css/default.css
/* ... */
code span.vs { color: var(--GW-syntax-highlight-color-verbatim-string); font-style: italic; } /* VerbatimString: "dsVerbatimString, verbatim or raw strings like 'raw \backlash' in Perl, CoffeeScript, and shells, as well as r'\raw' in Python." */
code span.al { color: var(--GW-syntax-highlight-color-alert); text-decoration: underline; font-weight: bold; } /* Alert */
code span.er { color: var(--GW-syntax-highlight-color-error); } /* Error */
code span.im { color: var(--GW-syntax-highlight-color-import); font-weight: bold; font-style: italic } /* Import */

/********/
/* MATH */
/********/

.math.block {
    position: relative;
    display: block;
    overflow: hidden;
    margin: 1.25em auto;
    border: 1px solid var(--GW-math-block-scrollbar-border-color);
}

.math.block .mjpage {
    display: block;
    overflow: auto;
}

.math.block .MJXc-display {
    --background-color: var(--GW-math-block-background-color);

    display: inline-block;
    margin: 0;
    padding: 0.875em 0.75em 0.75em 0.75em;
    min-width: calc(100% - 1.5em);
    background-color: var(--background-color);
    transition:
        background-color 0.15s ease-out;
}
.math.block .MJXc-display.flash {
    --background-color: var(--GW-math-block-background-color-flash);

    transition:
        background-color 0.1s ease-out;
}

/*  Horizontal scroll bar styles (for WebKit/Chromium).
    */
.math.block .mjpage::-webkit-scrollbar {
    height: 14px;
    border-top: 1px solid var(--GW-math-block-scrollbar-border-color);
    background-color: var(--background-color);
}
.math.block .mjpage::-webkit-scrollbar-thumb {
    box-shadow:
        0 0 0 2px var(--background-color) inset,
        0 0 0 8px var(--GW-math-block-scrollbar-thumb-color) inset;
    border-color: var(--GW-math-block-scrollbar-border-color);
    border-style: solid;
    border-width: 1px 0 0 0;
}
.math.block .mjpage:hover::-webkit-scrollbar-thumb:hover {
    box-shadow:
        0 0 0 2px var(--background-color) inset,
        0 0 0 8px var(--GW-math-block-scrollbar-thumb-hover-color) inset;
}
@media only screen and (max-width: 649px) {
    .math.block .mjpage::-webkit-scrollbar {
        height: 10px;
    }
}

/*  Horizontal scroll bar styles (for Firefox).
    */
.math.block {
    scrollbar-color: var(--GW-math-block-scrollbar-thumb-color) var(--background-color);
}
.math.block:hover {
    scrollbar-color: var(--GW-math-block-scrollbar-thumb-hover-color) var(--background-color);
}

/*  Block buttons.
 */
.math.block .block-button-bar {
    position: absolute;
    top: -1px;
    right: -1px;
    border-color: var(--GW-math-block-scrollbar-border-color);
    border-style: solid;
    border-width: 1px;
    text-indent: 0;
}
@media only screen and (min-width: 650px) {
    .math.block .block-button-bar {
        opacity: 0;
        visibility: hidden;
        transition:
            opacity 0.15s ease,
            visibility 0.15s ease;
    }
    .math.block:hover .block-button-bar {
        opacity: 1.0;
        visibility: visible;
        transition:
            opacity 0s ease 0.05s,
            visibility 0s ease 0.05s;
    }
}
.math.block .block-button-bar button {
    appearance: none;
    display: block;
    font-size: inherit;
    border: none;
    padding: 0.25em;
    width: 1.25em;
    background-color: var(--GW-body-background-color);
    cursor: pointer;
}
.math.block .block-button-bar button svg {
    opacity: 0.65;
}
@media only screen and (hover: hover) {
    .math.block .block-button-bar button svg {
        opacity: 0.45;
    }
    .math.block .block-button-bar button:hover svg {
        opacity: 0.65;
    }
}
.math.block .block-button-bar button:active svg {
    transform: translateY(1px);
}

/********/
/* MISC */
/********/

/* Hanging Punctuation https://en.wikipedia.org/wiki/Hanging_punctuation
   Microtypography: paragraphs starting/ending in quote marks outdent the quote slightly, so the paragraph continues to line up.
   This is most noticeable in epigraphs and blockquotes. Minor, but nice.
   CSS standard: https://www.w3.org/TR/css-text-3/#propdef-hanging-punctuation
   Supported only in Safari https://caniuse.com/css-hanging-punctuation https://developer.mozilla.org/en-US/docs/Web/CSS/hanging-punctuation#browser_compatibility as of 2023-04-20, but that has 19% market share, which is not nothing. */
p {
    hanging-punctuation: first last;
}

/*  LaTeX/TeX: Format the logotypes correctly (a higher up, e lower)
    (borrowed from https://latex.now.sh/ )
    */
.logotype-latex .logotype-latex-a {
    text-transform: uppercase;
    font-size: 0.80em;
    vertical-align: 0.25em;
    margin-left: -0.30em;
    margin-right: -0.03em;
    line-height: 1ex;
}
.logotype-latex .logotype-latex-e {
    text-transform: uppercase;
    vertical-align: -0.5ex;
    margin-left: -0.13em;
    margin-right: -0.10em;
    line-height: 1ex;
}
.logotype-tex sub {
    text-transform: uppercase;
    vertical-align: -0.50ex;
    margin-left: -0.08em;
    margin-right: -0.08em;
    font-size: 1em;
}

/*  Prevent text-shadow of italics in links from creating visual glitches
    (also fixes occasional link icon overlaps, eg. a WP link to ‘MGS:V’ where
    the right-tilted ‘V’ would touch the WP ‘W’ link icon).
 */
.markdownBody em {
    margin-right: 0.1em;
}

/*  SUBSCRIPT+SUPERSCRIPT (necessary for inflation adjuster, and other math)
 */
.subsup {
    margin-left: 0.15em;
    margin-right: 0.1em;
    text-indent: 0; /* override the `p + p { text-indent: 2.5em; }` */
    display: inline-flex;
    flex-flow: column;
    align-items: flex-start;
    vertical-align: text-bottom;
    position: relative;
    bottom: -0.1em;
}
.subsup sup,
.subsup sub {
    position: relative;
    font-size: 0.7em;
    line-height: 1;
}
/*  Make sure that adjusted prices move as a block: no breaking in the middle
    between the price & sup/sub; this works better than trying to use no-break
    Unicode entities.
 */
span.inflation-adjusted {
    white-space: nowrap;
}
/* ... */

